# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51
# Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
# Copyright 2013 (c) SkySQL Ab
#
# Author: Massimo Siani
# Date: August 2013
#




CHANGELOG

* Thu Oct 17 2013 Massimo Siani <massimo.siani@skysql.com>
- Add support for delta values in JS monitors
- Select the log verbosity by setting a variable in the init script
- Use IP if hostname is not set

* Wed Oct 16 2013 Massimo Siani <massimo.siani@skysql.com>
- Add monitor cache
- Improve configuration loading

* Thu Oct 10 2013 Massimo Siani <massimo.siani@skysql.com>
- Add init script

* Mon Oct 7 2013 Massimo Siani <massimo.siani@skysql.com>
- When a node is deleted, also remove its cached data

* Fri Oct 4 2013 Massimo Siani <massimo.siani@skysql.com>
- Fix a bug when retrieve node credentials
- Fix a bug when caching node data

* Tue Oct 1 2013 Massimo Siani <massimo.siani@skysql.com>
- Bug fix
- Fix .spec file

* Mon Sep 30 2013 Massimo Siani <massimo.siani@skysql.com>
- Add Galera nodes membership.
- Switch to syslog.
- Add provisioned node API support.
- Refresh based on If-Modified-Since.

* Tue Sep 10 2013 Massimo Siani <massimo.siani@skysql.com>
- Fixed node state API incompatibility.
- Removed json simple, and switched to JSON objects only.

* Thu Sep 5 2013 Massimo Siani <massimo.siani@skysql.com>
- Remove any reference to SQLite db file.

* Wed Sep 4 2013 Massimo Siani <massimo.siani@skysql.com>
- Implemented Gson

* Tue Sep 3 2013 Massimo Siani <massimo.siani@skysql.com>
- Fixings

* Thu Aug 29 2013 Massimo Siani <massimo.siani@skysql.com> - 1.6.0
- Added: GET API calls compatible with new API

* Fri Aug 16 2013 Massimo Siani <massimo.siani@skysql.com> - 1.5.3
- Fixed: jdbc connection hangs on a node shutdown
